[metadata]
name = alfen_eve_modbus_tcp
version = 0.0.11
author = nessnaj
description = Alfen Eve Car Charger parser library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/nessnaj/alfen_eve_modbus_tcp
project_urls =
    Issue Tracker = https://github.com/nessnaj/alfen_eve_modbus_tcp/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
    pymodbus >= 3.5.0
    pyserial-asyncio >= 0.6.0

[options.packages.find]
where = src